# Benasque_hack

./: .gitignore  .pre-commit-config.yaml  ClassicalPreprocessing.py  H2_HEA.ipynb  Hackathon - data.xlsx  LICENSE  QOAO_V1.ipynb  README.md  plot_utils.py  pyproject.toml  qmio_script.py  route_optimizer_functions.py  run_route_optimizer.py  simple_classical_preprocessing.ipynb  simulation_utils.py  slurm.sh  test_penalties.ipynb  toy_problem.ipynb
