[project]
name = "Benasque_hack"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "mitiq>=0.49.0",
    "numpy",
    "pennylane-quantuminspire>=0.4.1",
    "ply>=3.11",
    "qiskit",
    "qiskit-aer",
    "qiskit-ibm-runtime>=0.45.1",
    "qiskit-nature-pyscf>=0.4.0",
    "qiskit-optimization>=0.7.0",
    "qiskit-quantuminspire>=0.15.0",
    "qmio>=0.1.3",
    "quantuminspire>=3.5.1",
    "scienceplots>=2.2.1",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]

[tool.uv]
package = false

[tool.setuptools]
packages = []
py-modules = []
